# rust-chat-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: main.rs
static/: index.html
