[package]
name = "rust-chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
futures = "0.3" 